--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "materialize-css": "^1.0.0-rc.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-reveal": "^1.2.2",
     "react-scripts": "3.0.1",
     "react-scroll": "^1.7.12",
-    "react-scrollable-anchor": "^0.6.1"
+    "react-scrollable-anchor": "^0.6.1",
+    "react-typical": "^0.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
